<resources>
    <string name="app_name">ColdWeather</string>
    <string name="searchPlaceEdithint">输入地址</string>
    <string name="separator">|</string>
    <string name="forcase">预报</string>
    <string name="lifeindex">生活指数</string>
    <string name="cold">感冒</string>
    <string name="dressing">穿衣</string>
    <string name="ultravioletrays">实时紫外线</string>
    <string name="carwashing">洗车</string>
</resources>